--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,12 @@ on:
   push:
     branches: [main]
 
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   sync-to-hub:
-    run-on: ubuntu-latest
+    name: Sync with Hugging face
+    runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
         with:
