--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
           fetch-depth: 0
       - name: Add remote
         env:
-          HG: ${{ secrets.HG }}
+          HF: ${{ secrets.HF }}
         run: git remote add space https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/app
       - name: Push to hub
         env:
-          HG: ${{ secrets.HG }}
+          HF: ${{ secrets.HF }}
         run: git push --force https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/app main
