--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Add remote
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/app
+        run: git remote add space https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/demo2
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/app main
+        run: git push --force https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/demo2 main
