--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install huggingface_hub
+      - name: Login to Hugging Face Hub
+        run: huggingface-cli login ${{ secrets.HG }}
       - name: Add remote
         env:
-          HF: ${{ secrets.HF }}
+          HF: ${{ secrets.HG }}
         run: git remote add space https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/demo2
       - name: Push to hub
         env:
-          HF: ${{ secrets.HF }}
+          HF: ${{ secrets.HG }}
         run: git push --force https://MBIANDI:$HF@huggingface.co/spaces/MBIANDI/demo2 main
