--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install huggingface_hub
+          make install
       - name: Add remote
         env:
           HF: ${{ secrets.HG }}
